# backtest-engine

./: .gitmodules  CMakeLists.txt  main.cpp
include/engine/data/: Bar.h  BarFeed.h  Concepts.h  CsvBarSource.h  DataLoader.h
